Correctly initialize the pressure for the hairy brush

To get a nice effect, we need to start with a pressure of 1.0 instead
of 0.0.

BUG:313292